--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
             <img src="img/4.jpg" alt="image4" />       
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-        <script src="js/simpleslides-v1.0.1-stable-min.js"></script>
+        <script src="js/simpleslides-v1.0.1.js"></script>
     </body>
 </html>
